2010-06-11  James Robinson  <jamesr@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] Skia mispaints pages with border-radius
        https://bugs.webkit.org/show_bug.cgi?id=40456

        Tests deeply nested divs with border-radius.

        * fast/css/nested-rounded-corners-expected.txt: Added.
        * fast/css/nested-rounded-corners.html: Added.
        * platform/chromium/test_expectations.txt
        * platform/chromium-linux/fast/css/nested-rounded-corners-expected.checksum: Added.
        * platform/chromium-linux/fast/css/nested-rounded-corners-expected.png: Added.

2010-06-11  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        tables/mozilla/bugs/bug1188.html needlessly depends on HTML Parser text node handling
        https://bugs.webkit.org/show_bug.cgi?id=40485

        The old HTMLTokenizer handled invalid close tags like "< /A>" as part
        of the lexing step.  The HTML5 parser specification dictates that
        the tokenization/lexing step is to output each character token in sequence
        and that the parser is to insert emitted character tokens into the last
        parser-created text node.  In our current HTML5Lexer-with-old-HTMLParser
        setup, we gather up character tokens and output them all in one bunch
        (to match the expectations of the old parser).
        
        In the case of "foo< /A>" the HTML5Lexer sees the '<', switched out of the
        "data" state and emits all pending characters assuming the start of a close tag.
        When it sees the ' ' it switches back to the "data" state.  The HTML5Lexer
        expects that the parser will coalesce the separate characters it emitted
        into one text node.  Since we haven't implemented the parser side of the
        HTML5 spec, for now we don't.  This is a known issue we will address after
        enabling the HTML5Lexer, as we start to write an HTML5-compliant parser.
