@@ -24,14 +24,6 @@ PASS info[ii].size is expected[ii].size
 PASS info[ii].name is expected[ii].name
 PASS info[ii].type is expected[ii].type
 PASS info[ii].size is expected[ii].size
-PASS info2[ii] is non-null.
-PASS info2[ii] is non-null.
-PASS info2[ii].name is expected2[ii].name
-PASS info2[ii].type is expected2[ii].type
-PASS info2[ii].size is expected2[ii].size
-PASS info2[ii].name is expected2[ii].name
-PASS info2[ii].type is expected2[ii].type
-PASS info2[ii].size is expected2[ii].size
 PASS context.getActiveAttrib(program, 2) is null
 PASS context.getError() is context.INVALID_VALUE
 PASS context.getActiveAttrib(program, -1) is null
